CHANGES
=======

3.8.0 (unreleased)
------------------

- Moved IHTTPException, IMethodNotAllowed, and MethodNotAllowed from
  zope.app.http to zope.publisher.interfaces.http, fixing dependency
  cycles involving zope.app.http.

3.7.0 (2009-05-13)
------------------

- Move ``IView`` and ``IBrowserView`` interfaces into
  ``zope.browser.interfaces``, leaving BBB imports.

3.6.4 (2009-04-26)
------------------

- Added some BBB code to setDefaultSkin to allow IBrowserRequest's to continue
  to work without configuring any special adapter for IDefaultSkin.

- Move `getDefaultSkin` to the skinnable module next to the `setDefaultSkin`
  method, leaving a BBB import in place. Mark `IDefaultBrowserLayer` as a
  `IBrowserSkinType` in code instead of relying on the ZCML to be loaded.

3.6.3 (2009-03-18)
------------------

- Mark HTTPRequest as IAttributeAnnotatable if ``zope.annotation`` is
  available, this was previously done by ``zope.app.i18n``.

- Register `IHTTPRequest` -> `IUserPreferredCharsets` adapter in ZCML
  configuration. This was also previously done by ``zope.app.i18n``.

3.6.2 (2009-03-14)
------------------

- Add an adapter from ``zope.security.interfaces.IPrincipal`` to
  ``zope.publisher.interfaces.logginginfo.ILoggingInfo``. It was moved
  from ``zope.app.security`` as a part of refactoring process. 

- Add adapters from HTTP and FTP request to
  ``zope.authentication.ILoginPassword`` interface. They are moved from
  ``zope.app.security`` as a part of refactoring process. This change adds a
  dependency on the ``zope.authentication`` package, but it's okay, since it's
  a tiny contract definition-only package.

  See http://mail.zope.org/pipermail/zope-dev/2009-March/035325.html for
  reasoning.

3.6.1 (2009-03-09)
------------------

- Fix: remove IBrowserRequest dependency in http implementation based on
  condition for setDefaultSkin. Use ISkinnable instead of IBrowserRequest.

3.6.0 (2009-03-08)
------------------
