@@ -8,6 +8,10 @@ CHANGES
   zope.app.http to zope.publisher.interfaces.http, fixing dependency
   cycles involving zope.app.http.
 
+- Moved the DefaultViewName API from zope.app.publisher.browser to
+  zope.publisher.defaultview, making it accessible to other packages
+  that need it.
+
 3.7.0 (2009-05-13)
 ------------------
 
